-
Bug
-
Resolution: Done
-
P2: Important
-
6.2
-
None
-
-
925b0a7f33335fca4c416aaa593c9210e87149d2 (qt/qtmultimedia/dev) 2c5bbbd03d401005d746a0bb55197947bce1fa6f (qt/qtmultimedia/6.2)
Steps to reproduce:
1. Run spectrum example on Android device
2. Select settings button
3. Play with current configuration as on the video
4. Press ok
Actual:
App crashed
Expected:
App should not crash
- resulted from
-
QTBUG-93460 Test Android Examples
-
- Closed
-
For Gerrit Dashboard: QTBUG-96955 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
375502,2 | Q_DECLARE_METATYPE(WindowFunction) in spectrum example | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
376086,2 | Q_DECLARE_METATYPE(WindowFunction) in spectrum example | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |