Q_DECLARE_METATYPE(WindowFunction) in spectrum example

Pick-to: 6.2
Fixes: QTBUG-96955
Change-Id: I4c9d2da8d8f0dd3af9ce7482deaab3dedafa7755
Reviewed-by: Samuel Mira <samuel.mira@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>